# ConsoleChat

./: .gitignore  CMakeLists.txt
ConsoleChat.Client/: CMakeLists.txt  main.cpp
ConsoleChat.Client/src/: MessageExchanger.cpp  MessageExchanger.hpp
ConsoleChat.Common/src/: BoostCommon.hpp
ConsoleChat.Server/: CMakeLists.txt  main.cpp
ConsoleChat.Server/src/: Connection.cpp  Connection.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  Logger.hpp  MessageRouter.cpp  MessageRouter.hpp  Room.cpp  Room.hpp  RoomsHolder.cpp  RoomsHolder.hpp
